# mvvqwerty

./: Cargo.toml
.github/worflows/: build.yml
masterdnsvpn/: Cargo.toml  client_config.toml.simple  server_config.toml.simple  server_linux_install.sh
masterdnsvpn/src/: build_version.rs  lib.rs
masterdnsvpn/src/client/: config.rs  connection.rs  health.rs  lifecycle.rs  mod.rs  mtu.rs  queue.rs  recommendations.rs  retransmit.rs  rx.rs  session.rs  socks5.rs  state.rs  stream.rs  tx.rs
masterdnsvpn/src/dns_utils/: arq.rs  compression.rs  config_loader.rs  dns_balancer.rs  dns_enums.rs  dns_packet_parser.rs  mod.rs  packet_queue.rs  ping_manager.rs  prepend_reader.rs  utils.rs
masterdnsvpn/src/server/: config.rs  dns_handler.rs  lifecycle.rs  mod.rs  mtu.rs  packet_handler.rs  queue.rs  retransmit.rs  session.rs  socks5.rs  state.rs  stream.rs
