[workspace]
resolver = "3"
members = ["masterdnsvpn"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["MasterkinG32"]
description = "MasterDnsVPN - DNS Tunneling VPN"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi", "chrono"] }
rand = "0.8"
base32 = "0.5"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
aes-gcm = "0.10"
chacha20 = "0.9"
flate2 = "1"
lz4_flex = "0.11"
zstd = "0.13"
ipnet = "2"
bytes = "1"
parking_lot = "0.12"
chrono = "0.4"
ctrlc = "3"
hex = "0.4"
libc = "0.2"
windows-sys = { version = "0.59", features = ["Win32_Networking_WinSock"] }
