[package]
name = "masterdnsvpn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "masterdnsvpn-client"
path = "src/bin/client.rs"

[[bin]]
name = "masterdnsvpn-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
aes-gcm = { workspace = true }
chacha20 = { workspace = true }
flate2 = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
ipnet = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
ctrlc = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
libc = { workspace = true }
windows-sys = { workspace = true }
